--- a/package.xml
+++ b/package.xml
@@ -1,18 +1,26 @@
 <?xml version="1.0"?>
-<package format="2">
+<package>
   <name>build_blocks</name>
-  <version>0.0.0</version>
+  <version>2.0.0</version>
   <description>The hand_test package</description>
-  <maintainer email="shigeikuo@gmail.com">Ikuo Shige</maintainer>
 
+  <maintainer email="shigeikuo@gmail.com">Ikuo Shige</maintainer>
   <author email="tiryoh@gmail.com">Daisuke Sato</author>                  
   <author email="nomura@rt-net.jp">Hiroyuki Nomura</author>
 
-  <license>NON-COMMERCIAL LICENSE AGREEMENT</license>
+  <license>Apache License 2.0</license>
 
   <buildtool_depend>catkin</buildtool_depend>
-  <build_depend>rospy</build_depend>
-  <build_export_depend>rospy</build_export_depend>
-  <exec_depend>rospy</exec_depend>
+  <build_depend>crane_x7_moveit_config</build_depend>
+  <build_depend>std_msgs</build_depend>
+  <build_depend>geometry_msgs</build_depend>
+  <build_depend>message_generation</build_depend>
+  <run_depend>crane_x7_moveit_config</run_depend>
+  <run_depend>moveit_commander</run_depend>
+  <run_depend>message_runtime</run_depend>
+  <run_depend>joy</run_depend>
 
+  <export>
+
+  </export>
 </package>
