--- a/package.xml
+++ b/package.xml
@@ -15,6 +15,14 @@
   <build_depend>std_msgs</build_depend>
   <build_depend>geometry_msgs</build_depend>
   <build_depend>message_generation</build_depend>
+  <build_depend>qtbase5-dev</build_depend>
+  <build_depend>rviz</build_depend>
+
+  <run_depend>libqt5-core</run_depend>
+  <run_depend>libqt5-gui</run_depend>
+  <run_depend>libqt5-widgets</run_depend>
+  <run_depend>rviz</run_depend>
+
   <run_depend>crane_x7_moveit_config</run_depend>
   <run_depend>moveit_commander</run_depend>
   <run_depend>message_runtime</run_depend>
